--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
