Added skillmatcher link in home page and also added the contact and experience

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment Variables
+.env
+
+# Node Modules and Build Output
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Editor Directories and Files
 .vscode/*
 !.vscode/extensions.json
 .idea
