--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "framer-motion": "^11.3.8",
+    "lucide-react": "^0.456.0",
     "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
